# MeetingMinutesSummary

./: Makefile  pyproject.toml
src/: ai.py
transripts/: AI Lab PoG Daily Sync-up.vtt  AI Lab PoG bi-weekly status update.vtt
