[tool.poetry]
name = "meetingminutessummary"
version = "0.1.0"
description = "Summary meeting notes"
authors = ["ryker_chang <ryker_chang@trendmicro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.14.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
